--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,11 @@
 MONGODB_URI=
+
+JWT_SECRET=
+
+NEXT_PUBLIC_DOMAIN=
+
+NODEMAILER_HOST=
+NODEMAILER_PORT=
+NODEMAILER_USER=
+NODEMAILER_PASS=
+USER_MAILER=
